  encoding in them. (Kazutoshi Satoda)

- SF Bug #1764090: Slight Error in jedit.desktop file
  There was actually an error in jEdit.java that caused it to hit an
  NPE when processing URLs provided in the command line. Fix it by not
  trying to find an open buffer when trying to parse an URL in the
  openFile() method. (Marcelo Vanzin)

}}}
{{{ Miscellaneous

- After an hypersearch, if a result is on the caret line, it is automatically selected
  in the tree (Matthieu Casanova)

- If you remove the last node of the HyperSearch dockable, it will hide
  (Feature Request #1593526) (Matthieu Casanova)

- A new option introduced in Saving & backups option panel to turn off autosave
  of untitled buffers (Feature Request #1520769)  (Matthieu Casanova)

- New option in General Options: Check for File Change upon. Many options
  to customize when jEdit checks for file changes, especially useful when many
  files are mounted on remote/slow file systems. (Joe Walp - Patch # 1768638)

- A new button is introduced in the plugin manager : "Find Orphans".
  It will find the jars that are in your jars directory and do not belong to any
  plugin. Be careful some plugins like SQL can use jars without declaring them
  like the JDBC drivers (Matthieu Casanova)

- A new option is introduced in the general option panel. Now jEdit will ask
  the user if he wants to stop hypersearch if a result count limit is reached.
  By default the count is 1000. It checks the limit before each file so it is
  possible that a few more results are found before asking (Matthieu Casanova)
}}}
{{{ Editing


}}}
{{{ API Changes

- The bsh package was refactored to org.gjt.sp.jedit.bsh, all plugins that uses
  classes from this package will have to be repaired. This was necessary to fix
  bug (893349) (Matthieu Casanova)

- A new GUIUtilities.listConfirm() method that returns also the selected items
  in the list (Matthieu Casanova)

- JEditBuffer.undo() and JEditBuffer.redo() now takes a